# KaizenMAX

./: .env.example  .env.vaultd.example  .gitignore  .gitmodules  ARCHITECTURE.md  CUsersRobinDesktopARGTECHKaizenMAXAGENT_OPERATIONS.md  CUsersRobinDesktopARGTECHKaizenMAXui-rust-nativefrontendsrcmain.rs  MIDNIGHT_DELIVERY_HEARTBEAT.md  MIDNIGHT_DELIVERY_PLAN.md  README.md  ROADMAP.md  STRUCTURE.md  VISION.md  apply_patches.py  docker-compose.vaultd.yml  fix_cargo.py  implementation_plan.md  patch.py  test_commands.rs  test_lib.rs  test_tauri.rs
compat/: README.md
config/: defaults.json  settings-schema.json
contexts/: README.md  rollout_checklist.md
contexts/policies/: agent_control_policy.yaml  crystal_ball_event_policy.yaml  review_gate_policy.yaml  secret_vault_contract.md  vault_repo_sync_rule.md
contexts/templates/: kaizen_system_prompt.md  subagent_system_prompt.md
core/: Cargo.toml
core/src/: agents.rs  crystal_ball.rs  event_archive.rs  gate_engine.rs  inference.rs  lib.rs  main.rs  oauth_store.rs  openclaw_bridge.rs  provider_auth.rs  settings.rs  vault.rs  worker_runtime.rs  zeroclaw_runtime.rs  zeroclaw_tools.rs
core/src/providers/: crypto.rs  mod.rs  types.rs
core/src/webkeys/: auth.rs  browser.rs  executor.rs  gemini_executor.rs  mod.rs  runtime.rs  runtime_contract.rs  service.rs  session_health.rs  storage.rs  types.rs
core/src/webkeys/selectors/: gemini.rs  mod.rs
docker/vaultd/: Dockerfile
docs/: phase5_operator_readability_and_branches_plan.md  subagent-forward-plan.md  vaultd.md
protocol/: README.md
protocol/collision_matrix/: phase_b_initial_collision_matrix.md
scripts/: launch-kaizen-max.cmd  launch-kaizen-max.ps1  launch-kaizen-max.vbs  start-max.bat  start-max.ps1  stress-summary.ps1  test-gemini.ps1  ui-stress-guard.ps1  update-kaizen-max.ps1  upload_secret.ps1  upload_secret.py  validate-launch.ps1
tools/: README.md
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui-dioxus/: Cargo.toml
ui-dioxus/src/: main.rs
ui-rust-native/frontend/: Cargo.toml  index.html
ui-rust-native/frontend/src/: app.rs  lib.rs  styles.css
ui-rust-native/frontend/src/models/: types.rs
ui-rust-native/src-tauri/: Cargo.toml  tauri.conf.json
ui-rust-native/src-tauri/capabilities/: default.json
ui-rust-native/src-tauri/src/: commands.rs  commands.rs.tmp  lib.rs  main.rs
ui-tauri-solid/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui-tauri-solid/src/: App.tsx  styles.css
ui-tauri-solid/src-tauri/: Cargo.toml  tauri.conf.json
ui-tauri-solid/src-tauri/capabilities/: default.json
ui-tauri-solid/src-tauri/icons/: icon.icns
ui-tauri-solid/src-tauri/src/: commands.rs  lib.rs  main.rs
ui-tauri-solid/src/lib/: tauri.ts  types.ts
ui/src/: App.tsx  api.ts  index.css  types.ts
ui/src/components/: AgentChats.tsx  AgentPanel.tsx  CredentialsPanel.tsx  CrystalBall.tsx  KaizenChat.tsx  SettingsDrawer.tsx
