[package]
name = "kaizen-gateway"
version = "0.1.0"
edition = "2024"
description = "Kaizen runtime gateway for Kaizen MAX"
authors = ["ARGTECH"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
regex = "1"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
async-stream = "0.3"
data-encoding = "2"
constant_time_eq = "0.3"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
