[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
gloo-net = { version = "0.5" }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
web-sys = { version = "0.3", features = ["Window", "Storage", "Document"] }
uuid = { version = "1", features = ["v4", "js"] }
