[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
base64 = "0.22"
gloo-net = { version = "0.5" }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
web-sys = { version = "0.3", features = [
  "Window",
  "Storage",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "File",
  "FileList",
  "HtmlInputElement",
  "Navigator",
  "Blob",
  "Clipboard",
  "DomTokenList",
  "MouseEvent",
  "Request",
  "RequestInit",
  "Response",
  "ReadableStream",
  "ReadableStreamDefaultReader",
] }
uuid = { version = "1", features = ["v4", "js"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"
pulldown-cmark = "0.10"
