[package]
name = "kaizen_mission_control"
version = "0.1.0"
description = "Kaizen MAX Mission Control desktop app"
authors = ["ARGTECH"]
edition = "2021"

[package.metadata]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
webbrowser = "1"
